# opensearch-agent-server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  NOTICE.txt  README.md  SECURE_SETUP.md  SECURITY.md  mcp_config.yml  opensearch_dashboards.example.yml  pyproject.toml  run_server.py
.github/workflows/: add-untriaged.yml  changelog.yml  ci.yml  release-drafter.yml
scripts/: README.md  quickstart.sh  test_agents.sh  test_health.sh  test_run.sh
skills/ppl-reference/: SKILL.md
src/agents/: art_agent.py  base.py  default_agent.py  default_config.py  fallback_agent.py  specialized_agents.py  tool_filter.py
src/agents/art/: art_agent.py  config.py  specialized_agents.py
src/orchestrator/: registry.py  router.py
src/server/: __init__.py  ag_ui_app.py  ag_ui_event_processor.py  agent_orchestrator.py  cli.py  config.py  constants.py  default_mcp_config.yml  run_route_helpers.py  run_routes.py
src/tools/: experiment_tools.py  interleaved_test_tools.py  judgment_list_tools.py  search_configuration_tools.py  ubi_analytics_tools.py
src/tools/art/: ubi_metrics_tools.py
src/utils/: monitored_tool.py  obo_context.py  opensearch_client.py  tool_utils.py
tests/: conftest.py
tests/helpers/: __init__.py  specialized_agents_helpers.py
tests/integration/: test_specialized_agents.py
tests/unit/: test_art_config.py  test_default_agent.py  test_default_config.py  test_experiment_tools.py  test_experiment_tools_errors.py  test_interleaved_test_tools.py  test_judgment_list_tools.py  test_monitored_tool.py  test_opensearch_client.py  test_search_configuration_tools.py  test_search_configuration_tools_errors.py  test_specialized_agents_errors.py  test_tool_selection.py  test_tool_utils.py  test_ubi_analytics_tools.py  test_ubi_analytics_tools_errors.py  test_ubi_metrics_tools.py
