[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-agent-server"
version = "0.2.1"
description = "OpenSearch Agent Server for OpenSearch Dashboards — multi-agent orchestrator with page-context routing"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "OpenSearch Contributors" },
]
requires-python = ">=3.12"
keywords = [
    "opensearch",
    "agents",
    "ai",
    "llm",
    "mcp",
    "model-context-protocol",
    "fastapi",
    "dashboards",
    "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opensearch-py",
    "mcp>=1.9.0",
    "strands-agents[ollama,otel]>=1.30.0",
    "openinference-instrumentation-bedrock",
    "python-dotenv",
    "opensearch-mcp-server-py>=0.10.0",
    "ag-ui-protocol",
    "fastapi",
    "sse-starlette",
    "uvicorn",
    "jsonpatch>=1.33",
    "slowapi",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "PyJWT>=2.8.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite",
    "ag-ui-strands>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.27.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.0.0",
]

[project.scripts]
opensearch-agent-server = "server.cli:main"

[project.urls]
Homepage = "https://github.com/opensearch-project/opensearch-agent-server"
Documentation = "https://github.com/opensearch-project/opensearch-agent-server/blob/main/README.md"
Repository = "https://github.com/opensearch-project/opensearch-agent-server"
Issues = "https://github.com/opensearch-project/opensearch-agent-server/issues"
Changelog = "https://github.com/opensearch-project/opensearch-agent-server/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/server", "src/orchestrator", "src/agents", "src/utils", "src/tools"]
artifacts = ["src/server/*.yml"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
